# tclmcairo

./: .gitignore  CHANGELOG.md  INSTALL.md  LICENSE  Makefile  Makefile.in  Makefile.win  README.md  THIRD-PARTY-LICENSES.txt  aclocal.m4  build-win.bat  buildlt.sh  check-bawt.bat  config.status  configure  configure.in  install-deps-win.bat  libtclmcairo  libtkmcairo  pkgIndex.tcl  pkgIndex.tcl.in  svg2cairo.lines  svg2cairo.md5  test-win.bat  testlt.bat  testlt.sh
demos/: README.md  canvas_explorer.tcl  demo-canvas2cairo.tcl  demo-coordinates.tcl  demo-tclmcairo.tcl  demo-tkmcairo.tcl  nodeeditor.tcl
docs/: api-reference.md  canvas2cairo.md  manual.md  svg2cairo.md  tclmcairo-cheatsheet.csd  tclmcairo-cheatsheet.html
examples/: README.md  SAMPLES.md  _header.tcl  arc.tcl  arc_negative.tcl  clip.tcl  curve_to.tcl  dash.tcl  fill_and_stroke.tcl  fill_style.tcl  gradient.tcl  multi_segment_caps.tcl  rounded_rectangle.tcl  run_all.tcl  set_line_cap.tcl  set_line_join.tcl  text.tcl  text_align_center.tcl  text_extents.tcl
nogit/: handbuch-github-tkmcairo.md
src/: libtclmcairo.c  libtkmcairo.c  lunasvg_wrap.cpp
tcl/: canvas2cairo-0.1.tm  shape_renderer-0.1.tm  svg2cairo-0.1.tm  tclmcairo-0.2.tm  tclmcairo-0.3.1.tm  tclmcairo-0.3.2.tm  tclmcairo-0.3.3.tm  tclmcairo-0.3.4.tm  tclmcairo-0.3.5.tm  tclmcairo-0.3.6.tm  tclmcairo-0.3.tm  tkmcairo-0.1.tm
tests/: test-canvas2cairo.tcl  test-svg2cairo.tcl  test-tclmcairo.tcl  test-tkmcairo.tcl
tools/: gen_samples_md.tcl  test-luna-svg-3.tcl
