#-----------------------------------------------------------------------
# configure.in -- tclmcairo TEA Build-System
#
# tclmcairo: Cairo 2D-Grafik für Tcl (kein Tk nötig)
#
# Abhängigkeiten:
#   - Cairo  >= 1.14  (libcairo2-dev)
#   - Tcl    >= 8.6
#   - libjpeg (optional, libjpeg-dev / libjpeg-turbo8-dev)
#
# Verwendung:
#   autoconf
#   ./configure --with-tcl=/usr/lib/tcl8.6
#   make
#   make install
#   make test
#
# Ohne JPEG:
#   ./configure --with-tcl=/usr/lib/tcl8.6 --disable-jpeg
#-----------------------------------------------------------------------

AC_INIT([tclmcairo], [0.3])

TEA_INIT([3.9])

AC_CONFIG_AUX_DIR(tclconfig)

#--------------------------------------------------------------------
# Tcl (kein Tk nötig -- reine C-Extension)
#--------------------------------------------------------------------

TEA_PATH_TCLCONFIG
TEA_LOAD_TCLCONFIG

# TCLSH_PROG fuer Makefile verfuegbar machen
AC_SUBST(TCLSH_PROG)

TEA_PREFIX

TEA_SETUP_COMPILER

#--------------------------------------------------------------------
# Cairo -- Pflicht-Dependency
#--------------------------------------------------------------------

AC_MSG_CHECKING([for cairo])
if pkg-config --exists cairo 2>/dev/null; then
    CAIRO_CFLAGS=`pkg-config cairo --cflags`
    CAIRO_LIBS=`pkg-config cairo --libs`
    cairo_ver=`pkg-config cairo --modversion`
    AC_MSG_RESULT([yes (pkg-config: $cairo_ver)])
else
    CAIRO_CFLAGS=""
    CAIRO_LIBS="-lcairo"
    AC_MSG_RESULT([trying -lcairo directly])
fi

ac_save_CFLAGS="$CFLAGS"
CFLAGS="$CFLAGS $CAIRO_CFLAGS"
AC_CHECK_HEADER([cairo/cairo.h], [], [
    AC_MSG_ERROR([cairo/cairo.h not found. Install: apt install libcairo2-dev])
])
AC_CHECK_HEADER([cairo/cairo-pdf.h], [], [
    AC_MSG_ERROR([cairo/cairo-pdf.h not found. Install: apt install libcairo2-dev])
])
AC_CHECK_HEADER([cairo/cairo-svg.h], [], [
    AC_MSG_ERROR([cairo/cairo-svg.h not found. Install: apt install libcairo2-dev])
])
CFLAGS="$ac_save_CFLAGS"

TEA_ADD_INCLUDES([$CAIRO_CFLAGS])
TEA_ADD_LIBS([$CAIRO_LIBS])

#--------------------------------------------------------------------
# JPEG -- optionale Dependency
#--------------------------------------------------------------------

AC_ARG_ENABLE([jpeg],
    [AS_HELP_STRING([--disable-jpeg], [disable JPEG support (default: auto)])],
    [enable_jpeg=$enableval], [enable_jpeg=auto])

if test "$enable_jpeg" != "no"; then
    AC_CHECK_HEADER([jpeglib.h],
        [AC_CHECK_LIB([jpeg], [jpeg_CreateDecompress],
            [
                AC_MSG_RESULT([JPEG support enabled])
                TEA_ADD_CFLAGS([-DHAVE_LIBJPEG])
                TEA_ADD_LIBS([-ljpeg])
            ],
            [
                if test "$enable_jpeg" = "yes"; then
                    AC_MSG_ERROR([libjpeg not found. Install: apt install libjpeg-dev])
                else
                    AC_MSG_RESULT([libjpeg not found, JPEG support disabled])
                fi
            ])],
        [
            if test "$enable_jpeg" = "yes"; then
                AC_MSG_ERROR([jpeglib.h not found. Install: apt install libjpeg-dev])
            else
                AC_MSG_RESULT([jpeglib.h not found, JPEG support disabled])
            fi
        ])
fi

#--------------------------------------------------------------------
# Quellcode
#--------------------------------------------------------------------

TEA_ADD_SOURCES([src/libtclmcairo.c])
TEA_ADD_HEADERS([])
TEA_ADD_INCLUDES([])
TEA_ADD_LIBS([-lm])
TEA_ADD_CFLAGS([])
TEA_ADD_STUB_SOURCES([])
TEA_ADD_TCL_SOURCES([tcl/tclmcairo-0.3.tm])

#--------------------------------------------------------------------
# Tcl Public Headers
#--------------------------------------------------------------------

TEA_PUBLIC_TCL_HEADERS

#--------------------------------------------------------------------
# Wir haben keine Tk-Abhängigkeit
#--------------------------------------------------------------------

TEA_PRIVATE_TCL_HEADERS

#--------------------------------------------------------------------
# Shared Library
#--------------------------------------------------------------------

TEA_ENABLE_SHARED

#--------------------------------------------------------------------
# C Standard
#--------------------------------------------------------------------

TEA_ADD_CFLAGS([-std=c11 -Wall -Wextra])

#--------------------------------------------------------------------
# pkgIndex.tcl generieren
#--------------------------------------------------------------------

TEA_MAKE_LIB

AC_CONFIG_FILES([Makefile pkgIndex.tcl])
AC_OUTPUT
